[metadata]
name = django-sms-uz
version = 1.0.1
author = Boltayev Davronbek
author_email = tarjimatv1@gmail.com
maintainer = Boburbek
maintainer_email = boburbek@gmail.com
description = SMS sending api for django
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/firdavsDev
license = MIT
keywords = sms, django, api, sending, sending api, sending sms, sending sms api, sending sms api django, sending sms api django
classifiers = 
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
packages = find:
